@@ -523,8 +523,9 @@ debian-libclc-build:
 	echo "Using cmake: $$CMAKE_BIN"; \
 	cd libclc/build && \
 	$$CMAKE_BIN ../ \
-	-DCMAKE_INSTALL_DATADIR=/usr/lib \
-	-DCMAKE_INSTALL_INCLUDEDIR=/usr/include \
+	-DCMAKE_INSTALL_PREFIX=/usr \
+	-DCMAKE_INSTALL_DATADIR=lib \
+	-DCMAKE_INSTALL_INCLUDEDIR=include \
 	-DLLVM_CONFIG=$(CURDIR)/$(TARGET_BUILD_STAGE2)/bin/llvm-config \
 	-DLIBCLC_TARGETS_TO_BUILD="amdgcn--;amdgcn--amdhsa;r600--;nvptx--;nvptx64--;nvptx--nvidiacl;nvptx64--nvidiacl"; \
 	make $(NJOBS) $(VERBOSE)
