@@ -10,6 +10,9 @@ llvm-toolchain-12 (1:12.0.1-2) unstable; urgency=medium
     for llvm manifest tool (llvm-mt)
     (Closes: #990537)
 
+  [ Jordan Justen ]
+  * d/rules: Adjust cmake defines to fix libclc.pc paths
+
  -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 12 Jul 2021 08:19:59 +0200
 
 llvm-toolchain-12 (1:12.0.1-1) unstable; urgency=medium
